@@ -5101,7 +5101,7 @@ PretendTclpStat(
 	 */
 
 	if (OUT_OF_URANGE(realBuf.st_ino) || OUT_OF_RANGE(realBuf.st_size)
-#   ifdef HAVE_ST_BLOCKS
+#   ifdef HAVE_STRUCT_STAT_ST_BLOCKS
 		|| OUT_OF_RANGE(realBuf.st_blocks)
 #   endif
 	    ) {
@@ -5139,8 +5139,10 @@ PretendTclpStat(
 	buf->st_atime   = realBuf.st_atime;
 	buf->st_mtime   = realBuf.st_mtime;
 	buf->st_ctime   = realBuf.st_ctime;
-#   ifdef HAVE_ST_BLOCKS
+#   ifdef HAVE_STRUCT_STAT_ST_BLKSIZE
 	buf->st_blksize = realBuf.st_blksize;
+#   endif
+#   ifdef HAVE_STRUCT_STAT_ST_BLOCKS
 	buf->st_blocks  = (blkcnt_t) realBuf.st_blocks;
 #   endif
     }
